--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "gatsby-plugin-sitemap": "^6.10.0",
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "use-interval": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.5",
